# aeda-ai

./: .dockerignore  .gitignore  CITATION.cff  CODEX_PROMPT_DEPTH_AND_AUDIT_POLISH.md  CODEX_PROMPT_FIX1_baseline_user_per_site.md  CODEX_PROMPT_FIX2_clustering_auto_kwargs.md  CODEX_PROMPT_FIX3_heavy_metals_alignment.md  CODEX_PROMPT_FIX4_integrate_interpretation.md  CODEX_PROMPT_FIX_COORDINATE_Y_EXCLUSION.md  CODEX_PROMPT_FIX_DEPTH_GRADIENT.md  CODEX_PROMPT_FIX_DUPLICATED_SIDEBAR_MENU.md  CODEX_PROMPT_FIX_EFFECTIVE_SETTINGS.md  CODEX_PROMPT_FIX_RESULTS_AND_AUDIT_ERRORS.md  CODEX_PROMPT_FIX_RESULTS_AND_AUDIT_v2.md  CODEX_PROMPT_FIX_SURFACE_EXCLUDE_COLS.md  CODEX_PROMPT_INTERPRETATION.md  CODEX_PROMPT_QA_CONSOLIDATED_FIXES.md  CODEX_PROMPT_QA_PASS2_BUGS_AND_CAPTIONS.md  CODEX_PROMPT_RESULTS_PAGE_POLISH.md  CODEX_PROMPT_TANDA2_SURFACE_BACKEND.md  CODEX_PROMPT_TANDA2_SURFACE_UI.md  CODEX_PROMPT_UI_FOUNDATION.md  CODEX_PROMPT_UI_PAGES_POLISH.md  CODEX_PROMPT_VERIFICATION.md  CODEX_PROMPT_YOELVIS_BATCH1.md  Dockerfile  HANDOFF_CICLO2.md  HANDOFF_TANDA1_YOELVIS.md  LICENSE  README.md  README_DETALLADO.md  aeda-ai-v2.rar  aeda-ai.rar  aeda-ai3.rar  environment.yml  ingestion_examples.py  main.py  main_ingestion.py  pyproject.toml  requirements-lock.txt  (+5 more)
.streamlit/: config.toml
aeda/: __init__.py  i18n.py
app/: exports.py  i18n.py  main.py  report.py  report_figures.py  theme.py
config/: params.yaml
data/: BD_ISOVIDA_MANGLARES2023_rectificadaYBA_230326.xlsx
docs/: IMPLEMENTATION_SUMMARY.md  INGESTA_CONCEPTOS_CLAVE_README.md  INGESTION_MODULE_GUIDE.md  (+2 more)
src/: __init__.py  (+2 more)
(+90 files in other folders)
